sylva/base/static/css/base.css
/* ... */
#main header.global select#nodeTypeNavigation {
    display: inline;
/*    height: 20px;*/
    padding: 0px;
    margin: 0px;
    top: 7px;
    position: relative;
    float: right;
    max-width: 300px;
    width: auto;
}

#main header.global nav.main ul li a {
    border-radius: 4px;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.9);
    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.9);
    -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.9);
    display: block;
    margin-top: 1px;
    font-size: 12px;
    font-weight: 700;
    color: #262626;
    text-decoration: none;
    padding: 5px 5px 5px 5px;
    background-color: white;
}

#main header.global nav.main ul li a.active {
    opacity: 0.2;
    cursor: default;
}

#main header.global nav.main ul li a.link-home span {
    background: url(../img/larr.gif) no-repeat 0 50%;
    padding: 2px 2px 2px 10px;
}

#main header.global nav ul li a.link span {
    padding-left:3px;
    padding-right:3px;
}

#main header.global nav.main ul li a:hover {
    box-shadow: 0 0 5px rgba(52,142,130,0.75);
    -webkit-box-shadow: 0 0 5px rgba(52,142,130,0.75);
    -moz-box-shadow: 0 0 5px rgba(52,142,130,0.75);
}

#main header.global nav.main ul {
    padding: 11px 0 0 0;
}

header .messages {
    width: 500px;
    margin: auto;
    text-align: center;
    position: absolute;
    top: 35px;
    left: 30%;
    z-index: 1000;
}

header .messages .error,
header .messages .warning,
header .messages .success,
header .messages .info,
header .messages .debug {
    font-weight: bold;
    padding: 7px;
    border-radius: 6px;
}

header .messages .error {
    color: #B94A48;
    background-color: #F2DEDE;
}

header .messages .warning {
    color: #C09853;
    background-color: #FCF8E3;
}

header .messages .success {
    color: #468847;
    background-color: #DFF0D8;
}

header .messages .info {
    color: #3A87AD;
    background-color: #D9EDF7;
}

header .messages .debug {
    color: red;
    background-color: lightgray;
}

ul#box-nav li a.text {
    border: none;
    background: none;
    color: #348E82;
    border-radius: none;
    box-shadow: none;
    -moz-border-radius: none;
    -webkit-border-radius: none;
}

ul#box-nav li a {
    border-radius: 4px;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.9);
    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.9);
    -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.9);
    display: block;
    margin-top: 1px;
    font-size: 12px;
    font-weight: 700;
    color: #262626;
    text-decoration: none;
    padding: 5px 5px 5px 5px;
    background-color: white;
}

ul#box-nav li a:hover {
    box-shadow: 0 0 5px rgba(52,142,130,0.75);
    -webkit-box-shadow: 0 0 5px rgba(52,142,130,0.75);
    -moz-box-shadow: 0 0 5px rgba(52,142,130,0.75);
}

ul#box-nav {
    padding: 11px 0 0 0;
    top: -50px;
    right: -15px;
    position: relative;
    float: right;
}

ul#box-nav li {
    float: left;
    list-style: none;
    margin-left: 10px;
}

#main header.global nav ul li {
    float: left;
    list-style: none;
}

#main header.global h1 {
    font: normal 26px Georgia;
    color: #348E82;
    /*text-shadow: 1px 1px 1px #A19C60;*/
    /*padding-bottom: 10px;*/
    /*padding-top:5px;*/
}

#main header.global h1 a {
    display: block;
    text-align: center;
/*text-indent:-9999em;*/
}

#main header.global h1 a.inactive {
    cursor:default;
}

#body {
/*    background: white;*/
/*    width: 1140px;*/
/*    position: relative;*/
/*    margin: auto;*/
/*    padding: 5px 30px 5px 30px;*/
    background: white;
    width: 1150px;
    position: relative;
    margin: auto;
    padding: 5px 30px 5px 20px;
}

#body #homepage {
    padding-top: 0px;
}

.body-inside {
    min-height: 100px;
}

#main #footer.global {
    background: white;
    width: 1160px;
    position: relative;
    margin: auto;
    padding: 20px;
    /*z-index: -1;*/
}

#main #footer.global .inside {
    border-top: solid 1px #DADADA;
    width: 100%;
    padding-top: 15px;
    padding-bottom: 25px;
}

#footer {
    display: block;
}

ol, ul {
    list-style: none;
}

#main header.global nav.main,#main #footer.global .inside .top {
    float: right;
}

#main #footer.global .inside a {
    color: #555;
    text-decoration: none;
}

#main #footer.global .inside a:hover {
    text-decoration: underline;
}

#content3 {
    /*  width:992px;*/
    min-height: 450px;
    /*  background:#1D5600;*/
    text-align: left;
    padding-top: 0px;
    padding-bottom: 5px;
    overflow: hidden;
}

#content3 p {
    text-align:justify;
    padding-bottom:10px;
}

.content3-block {
    width: 365px;
    float: left;
    margin-left: 1px;
}

.content3-block p {
    width:320px;
    float:left;
    text-align:left;
}

#content2 {
    /*  width:992px;*/
    min-height: 400px;
    /*  background:#1D5600;*/
    text-align: left;
    padding-top: 0px;
    padding-bottom: 5px;
    overflow: hidden;
}

#content2 p {
    text-align:justify;
    padding-bottom:10px;
}

.content2-first {
    width: 347px;
    float: left;
    padding-left: 2px;
}

.content2-second {
    width: 740px;
    float: left;
    padding-left: 30px;
}

.content2-block p {
    width:365px;
    float:left;
    text-align:left;
}

/* three column area, vertical dotted divider */
.content-divider {
    background: url(../img/content-divider.gif) no-repeat top center;
    width: 1px;
    min-height: 400px;
    float: left;
    padding: 0px 10px 0px 10px;
}

#content2 .content-divider {
    background: url(../img/content-divider.gif) repeat-y top center;
    width: 1px;
    min-height: 420px;
    float: left;
    padding: 0px 10px 0px 10px;
    margin-top: 0;
}
/* end divider */

/* end content 2 */

#element-info {
    overflow: hidden;
    width: 180px;
}
/* ... */

